deploy/components/dex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: ${SHPYRD_PLATFORM_INGRESS_CLASS}
  tls:
    - hosts:
        - ${SHPYRD_AUTH_HOST}
      secretName: dex-tls
  rules:
    - host: ${SHPYRD_AUTH_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  name: http
